syntax = "proto3";

package types;

message User {
    string name = 1;
    string last_name = 2;
    string patronymic = 3;
    string login = 4;
    string sex = 5;
    uint64 bonus = 6;
    string birthday = 7;
    uint64 bank_account_id = 8;
    string prefecture_name = 9;
    bool is_admin = 10;
}

// used to list prefecture leaders, city hall mayor etc.
message PartialUser {
    string name = 1;
    string last_name = 2;
    string patronymic = 3;
    uint64 bank_account_id = 4;
}
